fixed layout bugs

--- a/Rosyblueonline.Web/Content/css/dashboard.css
+++ b/Rosyblueonline.Web/Content/css/dashboard.css
@@ -1672,7 +1672,7 @@ input[type=checkbox].design-checkbox {
         color: #3A4276;
         background: #F8F9FE;
         border-radius: 6px;
-        padding: 16px 20px;
+        padding: 10px 20px;
         cursor: pointer;
         margin: 0;
         margin-right: 10px;
@@ -1692,7 +1692,7 @@ input[type=radio]:checked + label, input[type=checkbox].design-checkbox:checked 
     border: 1px solid #F2F2F7;
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(50, 50, 71, 0.006);
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .key-symbcheckbox .key-rep {
@@ -2324,14 +2324,18 @@ a.sele-all {
     letter-spacing: 0.5px;
     color: #4F4F4F;
 }
+
+.advance-searchflt{
+  margin-top:10px;
+}
 .stoe-describe-box {
-    position: relative;
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid rgba(236, 233, 241, 0.5);
-    margin-bottom: 14px;
+  position: relative;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(236, 233, 241, 0.5);
+  margin-bottom: 14px;
 }
 
 .form-control {
@@ -2483,8 +2487,8 @@ a.sele-all {
 }
 .origin-stone h5, .origin-stone a {
     font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 18px;
+    line-height: 15px;
     color: #E9978C;
     position: relative;
     display: block;
